--- a/kontakt.html
+++ b/kontakt.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="Content/Style.css">
 </head>
 <body>
-    <section class="mainwrapper-form">
-    <form class="formvald">
+    <section class="mainwrapper-kontakt">
+    <form class="formvald-kontakt">
                 <h2>Kontakt Os</h2>
                 <div>
                     <input class="firstname" placeholder="Fulde navn" type="text" name="firstname" id="firstname">
@@ -21,9 +21,7 @@
                 <div>
                     <input type="tel" placeholder="Telefon nummer" name="number" id="number">
                 </div>
-                <div>
-                    <input type="text" size="200" placeholder="Kommentar" name="kommentar" id="kommentar">
-                </div>
+                <textarea class="textarea-form" rows="8" cols="50" name="comment" form="usrform">Skriv her...</textarea>
                 <div>
                     <button type="reset" id="clear">Ryd felter</button>
                     <button type="button" id="send">Send formular</button>
