--- a/Book-bane.html
+++ b/Book-bane.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Book bane</title>
     <link rel="stylesheet" href="Content/Style.css">
 </head>
 <body>
@@ -49,14 +49,14 @@
                             <div>
                                     <input type="date" placeholder="dato" name="date" id="date">
                                 </div>
+                                <div>
+                                    <input type="time" placeholder="tid" name="time" id="time">
+                                </div>
                     <button type="reset" id="clear">Ryd felter</button>
                     <button type="button" id="send">Lej Bane</button>
-                </div>   
-
-                <button onclick="document.getElementById('myImage').src='håndbold.png'">Turn on the light</button>
-
+                </div>
         </form>
     </section>
-    <script src="content/formjs.js"></script>
+    <script src="content/book.js"></script>
 </body>
 </html>
