--- a/kontakt.html
+++ b/kontakt.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Kontakt</title>
     <link rel="stylesheet" href="Content/Style.css">
 </head>
 <body>
@@ -15,9 +15,7 @@
                 </div>    
                 <div>
                     <input type="email" placeholder="E-mail adresse" name="email" id="email">
-                    
-                    <span>
-                </div> 
+                </div>
                 <div>
                     <input type="tel" placeholder="Telefon nummer" name="number" id="number">
                 </div>
@@ -28,6 +26,6 @@
                 </div>    
         </form>
     </section>
-    <script src="content/formjs.js"></script>
+    <script src="content/jskontakt.js"></script>
 </body>
 </html>
