--- a/kontakt.html
+++ b/kontakt.html
@@ -19,7 +19,7 @@
                 <div>
                     <input type="tel" placeholder="Telefon nummer" name="number" id="number">
                 </div>
-                <textarea class="textarea-form" rows="8" cols="50" name="comment" form="usrform">Skriv her...</textarea>
+                <textarea class="textarea-form" placeholder="Skriv her..." rows="8" cols="50" name="comment" form="usrform"></textarea>
                 <div>
                     <button type="reset" id="clear">Ryd felter</button>
                     <button type="button" id="send">Send formular</button>
