--- a/medlem.html
+++ b/medlem.html
@@ -34,7 +34,7 @@
                     <option class="optiontext" value="Håndbold bane">Sport55+</option>
                 </select>
             </div>  
-        <textarea class="textarea-form" rows="8" cols="50" name="comment" form="usrform">Skriv her...</textarea>
+        <textarea class="textarea-form" rows="8" cols="50" name="comment" form="usrform" placeholder="Skriv her..."></textarea>
         <div> 
                 <button type="reset" id="clear">Ryd felter</button>
                 <button type="button" id="send">Bliv medlem</button>
