--- a/Index.html
+++ b/Index.html
@@ -40,8 +40,14 @@
           <img src="Content/Media/Hal_Handball_02.jpg" alt="vander" /></span>
           <div class="title">
             <div>
-              <h2>Om os</h2>
-              <h4>plante pleje</h4>
+              <h2>Om Hallen</h2>
+              <h4>Hallen er paraplyorganisation for idrætsforeninger i Himmerland med ialt ca. 8.000 medlemmer. <br> 59 foreninger og tre landsdelsorganisationer med omkring 30 grupper tilsluttet. <br>
+
+                  De tilsluttede foreninger rækker lige fra store idrætsforeninger med op til 1.000 medlemmer <br> til små foreninger i landsdelen med en snes medlemmer. <br>
+                  
+                  De nyindrettede haller tilbyder en bred vifte af aktiviteter inden for idræt og kultur. <br>
+                  
+                  Bliv medlem af idrætsforeningen eller deltag i en lang række af aktiviteter der dækker netop dit behov.</h4>
             </div>
           </div>
           <a href='*'></a>
@@ -50,17 +56,22 @@
           <img src="Content/Media/Hal_Handball_01.jpg" alt="Hannemølle" /></span>
           <div class="title">
             <div>
-              <h2>Faciliteter</h2>
-              <h4>Tal dine planter til vækst</h4>
+              <h2>Medlems <br> skaber</h2>
+              <h4>Sport10+: <br>
+                  Sport10+ er i gang i bestemte uger af året. Du kan vælge mellem en masse forskellige sportsgrene <br> og tilbuddene er for dig, der er 10-14 år eller har et gyldigt medlemskort. <br> Alle tilbud er både for nybegyndere og mere øvede.
+                  <br> <br>
+                  Sport55+: <br>
+                 Sport55+ er idrætstilbuddet til alle i alderen 55 år og opefter – uanset om du er nybegynder <br> eller øvet inden for de forskellige aktiviteter.
+                 <br> Sport55+ giver dig mulighed for at dyrke sport og motion på en fleksibel måde, <br> hvor du samtidig introduceres til sportsgrene, der er tilpasset til den enkeltes niveau. <br> Samtidig er er Sport55+ en god mulighed for at møde nye mennesker gennem deltagelse i de mange aktiviteter.</h4>
             </div>
           </div>
           <a href="*"></a>
         </figure></div>
-      <div class="panel"><figure class="figure">
-          <img src="Content/Media/badminton_23.jpg" alt="plantepusser" />
+      <div class="panel"><figure class="figure"> <span class="image-wrap">
+          <img src="Content/Media/badminton_23.jpg" alt="plantepusser" /></span>
           <div class="title">
             <div>
-              <h2>Kursus</h2>
+              <h2>Faciliteter</h2>
               <h4>Sådan pudser du din plante</h4>
             </div>
           </div>
