--- a/fasiliteter.html
+++ b/fasiliteter.html
@@ -46,7 +46,7 @@
         </div>
     
         <div class="single-team">
-                <img src="Content/Media/badminton_23.jpg" alt="Badminton">
+                <img src="Content/Media/tennis1.jpg" alt="Badminton">
                 <div class="team-text">
                     <h2>Badminton</h2>
                     <p><a href="default.asp" target="_blank">Book</a> en bane når du har lyst
