--- a/Index.html
+++ b/Index.html
@@ -17,10 +17,10 @@
   <i id="hamburger" class="fas fa-bars hamburger"></i>
   <nav class="navigation" id="nav">
       <ul>
-          <li><a href="#">MEDLEMSKABER</a></li>
-          <li><a href="#">FACILITETER</a></li>
-          <li><a href="#">TILMELD</a></li>
-          <li><a href="#">BOOK BANE</a></li>
+          <li><a href="medlemskab.html">MEDLEMSKABER</a></li>
+          <li><a href="fasiliteter.html">FACILITETER</a></li>
+          <li><a href="medlem.html">TILMELD</a></li>
+          <li><a href="Book-bane.html">BOOK BANE</a></li>
           <button>Rainbow mode</button>
       </ul>
   </nav>
@@ -154,9 +154,5 @@ var img = document.getElementsByClassName('slideimg');
 <script>$("button").click(function(){
   $(".ting, .headermain, .footer, .slideshow, .wrapper, .panel, body, .figure").toggleClass("rainbow");
 });</script>
-
-<script>$(".gå").click(function() {
-    $('.figure img').toggleClass('visit');
-  });</script>
 
 </html>
