--- a/fasiliteter.html
+++ b/fasiliteter.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="Content/Style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&display=swap" rel="stylesheet">
     <title>Fasiliteter</title>
 </head>
 <body>
     <div class="headermain">
         <header>
           <figure>
-             <a href="Index.html"> <img class="logo" src="Content/Media/Logo-nav.png" alt=" logo"></a>
+            <img class="logo" src="Content/Media/Logo-nav.png" alt=" logo">
           </figure>
           <i id="hamburger" class="fas fa-bars hamburger"></i>
           <nav class="navigation" id="nav">
@@ -135,7 +136,7 @@
   
         <div class="footer_info">
             <span class="footer_title">NYTTIGE LINKS</span>
-            <span>Kontakt</span>
+            <span> <a class="kon" href="kontakt.html">Kontakt</a> </span>
             <span>Bolde</span>
             <span>Påklædningsbetingelser</span>
             <span>Brugsbetingelser</span>
