--- a/medlemskab.html
+++ b/medlemskab.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="Content/Style.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&display=swap" rel="stylesheet">
     <title>Hallen</title>
 </head>
@@ -93,7 +91,7 @@
 
       <div class="footer_info">
           <span class="footer_title">NYTTIGE LINKS</span>
-          <span>Kontakt</span>
+          <span> <a class="kon" href="kontakt.html">Kontakt</a> </span>
           <span>Bolde</span>
           <span>Påklædningsbetingelser</span>
           <span>Brugsbetingelser</span>
